Added ability to delete project

--- a/index.html
+++ b/index.html
@@ -29,22 +29,12 @@
     <!-- Main -->
     <main role="main">
         <ul class="projects">
-
-            <!--<li id="project-id">
-                <h2>Project 1</h2>
-                <div class="timer">
-                    <p class="timer-label">Total Time Spent</p>
-                    <p class="timer-text"><span class="hours">00</span>:<span class="minutes">00</span>:<span class="seconds">00</span></p>
-                </div>
-                <button class="btn start">Start</button>
-                <button class="delete-btn"><i class="fa fa-times"></i></button>
-            </li>-->
-
         </ul>
     </main>
     <!-- End main-->
 
     <!-- JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/1.0.7/purify.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
